--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -64,6 +64,8 @@ body {
 }
 
 
+
+
 .content {
 	flex: 1 1 auto;
 
@@ -82,6 +84,24 @@ body {
 		display: flex;
 		flex-direction: row;
 	}
+	@media (max-width: 1100px){
+		&__row{
+			flex-wrap:wrap;
+		}
+	}
+}
+
+
+@media (max-width: 1100px){
+	.container{
+		max-width: 870px;
+	}
+}
+
+@media (max-width: 870px){
+	.container{
+		max-width: none;
+	}
 }
 .row {
 
@@ -91,14 +111,23 @@ body {
 		flex: 0 0 600px;
 		border-radius: 40px;
 		overflow: hidden;
-//		margin: 10px;
-//		border: 5px solid yellow;
+		
 		& img{
-			max-width: 0%;
+			max-width: 0;
 			min-height: 400px;
 			transition-duration:1s;
 		}
 	}
+	@media (max-width: 870px){
+		&__img{
+			flex: 1 1 400px;
+			& img{
+				max-width: 100%;
+				min-height: none;
+			}
+		}
+	}
+
 	&__img:hover{
 		& img{
 			max-width: 100%;
