--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,22 @@ body {
   display: flex;
   flex-direction: row;
 }
+@media (max-width: 1100px) {
+  .content__row {
+    flex-wrap: wrap;
+  }
+}
 
+@media (max-width: 1100px) {
+  .container {
+    max-width: 870px;
+  }
+}
+@media (max-width: 870px) {
+  .container {
+    max-width: none;
+  }
+}
 .row__img {
   background-color: #EEDDD4;
   flex: 0 0 600px;
@@ -145,9 +160,18 @@ body {
   overflow: hidden;
 }
 .row__img img {
-  max-width: 0%;
+  max-width: 0;
   min-height: 400px;
   transition-duration: 1s;
+}
+@media (max-width: 870px) {
+  .row__img {
+    flex: 1 1 400px;
+  }
+  .row__img img {
+    max-width: 100%;
+    min-height: none;
+  }
 }
 .row__img:hover img {
   max-width: 100%;
